refactor less "constructor"-mixins, added "primary" color

--- a/src/components/article/article.less
+++ b/src/components/article/article.less
@@ -55,7 +55,7 @@
 
     > dl:not([class]) {
 
-        border-top: @color-main-24 1px solid;
+        border-top: @color-base-24 1px solid;
         padding-top: 1rem;
 
         dt {
@@ -64,7 +64,7 @@
         }
 
         dd {
-            border-bottom: @color-main-24 1px solid;
+            border-bottom: @color-base-24 1px solid;
             margin-bottom: 1rem;
             padding-bottom: 1rem;
         }
@@ -80,7 +80,7 @@
     // block quotes
     
     > blockquote {
-        border-left: @color-main-22 2px solid;
+        border-left: @color-base-22 2px solid;
         font-style: italic;
         padding-left: 2.5rem;
     }
