--- a/src/components/button/button-subtle.less
+++ b/src/components/button/button-subtle.less
@@ -16,12 +16,14 @@
     }
 
     &:hover {
-        background: @color-main-24;
+        background: @color-base-24;
+        border-color: transparent;
     }
 
     &:active,
-    &.btn--active {
-        background: @color-main-22;
+    &.is--active {
+        background: @color-base-22;
+        border-color: transparent;
     }
 
 }
