--- a/src/components/checklist/checklist.less
+++ b/src/components/checklist/checklist.less
@@ -17,7 +17,7 @@
     }
 
     li::before {
-        .mixin-icon-bg(@id: 'icon-011-s', @fillColor: @color-main-8);
+        .mixin-icon-bg(@id: 'icon-011-s', @fillColor: @color-base-8);
         content: ' ';
         height: 1.5rem;
         left: -1rem;
