--- a/src/components/countdown/countdown.less
+++ b/src/components/countdown/countdown.less
@@ -5,17 +5,17 @@
 
 .countdown {
 
-    background: @color-main-8;
+    background: @color-base-8;
     border-radius: 6px;
-    box-shadow: @color-main-6 0 1px 0 inset;
+    box-shadow: @color-base-6 0 1px 0 inset;
     display: inline-block;
     position: relative;
     padding: 2px;
 
     .jsFallback {
-        text-shadow: @color-main-5 0 -1px 0;
+        text-shadow: @color-base-5 0 -1px 0;
         padding: 1rem;
-        color: @color-main-25;
+        color: @color-base-25;
     }
 
 }
@@ -25,12 +25,12 @@
 
 .countdown__title {
     clear: both;
-    color: @color-main-25;
+    color: @color-base-25;
     display: block;
     font-size: 1.5rem;
     font-weight: bold;
     padding: .5rem 1rem;
-    text-shadow: @color-main-5 0 -1px 0;
+    text-shadow: @color-base-5 0 -1px 0;
 }
 
 .countdown__clock {
@@ -41,9 +41,9 @@
 .countdown__hours,
 .countdown__minutes,
 .countdown__seconds {
-    background: @color-main-6;
+    background: @color-base-6;
     border-radius: 4px;
-    box-shadow: @color-main-6 0 1px 0, @color-main-11 0 1px 0 inset;
+    box-shadow: @color-base-6 0 1px 0, @color-base-11 0 1px 0 inset;
     float: left;
     padding: 2px;
     position: relative;
@@ -62,12 +62,12 @@
 .countdown__seconds {}
 
 .countdown__label {
-    color: @color-main-20;
+    color: @color-base-20;
     display: block;
     font-size: 1.3rem;
     font-weight: bold;
     position: relative;
-    text-shadow: @color-main-5 0 -1px 0;
+    text-shadow: @color-base-5 0 -1px 0;
 }
 
 .js .countdown__hiddenLabel {
@@ -80,7 +80,7 @@
 
     path,
     polygon {
-        fill: @color-main-7;
+        fill: @color-base-7;
         transition: all 100ms ease-out;
     }
 
@@ -92,91 +92,91 @@
 // "lcd" character
 
 .countdown--0 {
-    .countdown__character__segment-t  { fill: @color-main-24; }
-    .countdown__character__segment-tr { fill: @color-main-24; }
-    .countdown__character__segment-br { fill: @color-main-24; }
-    .countdown__character__segment-b  { fill: @color-main-24; }
-    .countdown__character__segment-bl { fill: @color-main-24; }
-    .countdown__character__segment-tl { fill: @color-main-24; }
+    .countdown__character__segment-t  { fill: @color-base-24; }
+    .countdown__character__segment-tr { fill: @color-base-24; }
+    .countdown__character__segment-br { fill: @color-base-24; }
+    .countdown__character__segment-b  { fill: @color-base-24; }
+    .countdown__character__segment-bl { fill: @color-base-24; }
+    .countdown__character__segment-tl { fill: @color-base-24; }
     .countdown__character__dots       { fill: transparent; }
 }
 
 .countdown--1 {
-    .countdown__character__segment-tr { fill: @color-main-24; }
-    .countdown__character__segment-br { fill: @color-main-24; }
+    .countdown__character__segment-tr { fill: @color-base-24; }
+    .countdown__character__segment-br { fill: @color-base-24; }
     .countdown__character__dots       { fill: transparent; }
 }
 
 .countdown--2 {
-    .countdown__character__segment-t  { fill: @color-main-24; }
-    .countdown__character__segment-tr { fill: @color-main-24; }
-    .countdown__character__segment-b  { fill: @color-main-24; }
-    .countdown__character__segment-bl { fill: @color-main-24; }
-    .countdown__character__segment-m  { fill: @color-main-24; }
+    .countdown__character__segment-t  { fill: @color-base-24; }
+    .countdown__character__segment-tr { fill: @color-base-24; }
+    .countdown__character__segment-b  { fill: @color-base-24; }
+    .countdown__character__segment-bl { fill: @color-base-24; }
+    .countdown__character__segment-m  { fill: @color-base-24; }
     .countdown__character__dots       { fill: transparent; }
 }
 
 .countdown--3 {
-    .countdown__character__segment-t  { fill: @color-main-24; }
-    .countdown__character__segment-tr { fill: @color-main-24; }
-    .countdown__character__segment-br { fill: @color-main-24; }
-    .countdown__character__segment-b  { fill: @color-main-24; }
-    .countdown__character__segment-m  { fill: @color-main-24; }
+    .countdown__character__segment-t  { fill: @color-base-24; }
+    .countdown__character__segment-tr { fill: @color-base-24; }
+    .countdown__character__segment-br { fill: @color-base-24; }
+    .countdown__character__segment-b  { fill: @color-base-24; }
+    .countdown__character__segment-m  { fill: @color-base-24; }
     .countdown__character__dots       { fill: transparent; }
 }
 
 .countdown--4 {
-    .countdown__character__segment-tr { fill: @color-main-24; }
-    .countdown__character__segment-br { fill: @color-main-24; }
-    .countdown__character__segment-tl { fill: @color-main-24; }
-    .countdown__character__segment-m  { fill: @color-main-24; }
+    .countdown__character__segment-tr { fill: @color-base-24; }
+    .countdown__character__segment-br { fill: @color-base-24; }
+    .countdown__character__segment-tl { fill: @color-base-24; }
+    .countdown__character__segment-m  { fill: @color-base-24; }
     .countdown__character__dots       { fill: transparent; }
 }
 
 .countdown--5 {
-    .countdown__character__segment-t  { fill: @color-main-24; }
-    .countdown__character__segment-br { fill: @color-main-24; }
-    .countdown__character__segment-b  { fill: @color-main-24; }
-    .countdown__character__segment-tl { fill: @color-main-24; }
-    .countdown__character__segment-m  { fill: @color-main-24; }
+    .countdown__character__segment-t  { fill: @color-base-24; }
+    .countdown__character__segment-br { fill: @color-base-24; }
+    .countdown__character__segment-b  { fill: @color-base-24; }
+    .countdown__character__segment-tl { fill: @color-base-24; }
+    .countdown__character__segment-m  { fill: @color-base-24; }
     .countdown__character__dots       { fill: transparent; }
 }
 
 .countdown--6 {
-    .countdown__character__segment-t  { fill: @color-main-24; }
-    .countdown__character__segment-br { fill: @color-main-24; }
-    .countdown__character__segment-b  { fill: @color-main-24; }
-    .countdown__character__segment-bl { fill: @color-main-24; }
-    .countdown__character__segment-tl { fill: @color-main-24; }
-    .countdown__character__segment-m  { fill: @color-main-24; }
+    .countdown__character__segment-t  { fill: @color-base-24; }
+    .countdown__character__segment-br { fill: @color-base-24; }
+    .countdown__character__segment-b  { fill: @color-base-24; }
+    .countdown__character__segment-bl { fill: @color-base-24; }
+    .countdown__character__segment-tl { fill: @color-base-24; }
+    .countdown__character__segment-m  { fill: @color-base-24; }
     .countdown__character__dots       { fill: transparent; }
 }
 
 .countdown--7 {
-    .countdown__character__segment-t  { fill: @color-main-24; }
-    .countdown__character__segment-tr { fill: @color-main-24; }
-    .countdown__character__segment-br { fill: @color-main-24; }
+    .countdown__character__segment-t  { fill: @color-base-24; }
+    .countdown__character__segment-tr { fill: @color-base-24; }
+    .countdown__character__segment-br { fill: @color-base-24; }
     .countdown__character__dots       { fill: transparent; }
 }
 
 .countdown--8 {
-    .countdown__character__segment-t  { fill: @color-main-24; }
-    .countdown__character__segment-tr { fill: @color-main-24; }
-    .countdown__character__segment-br { fill: @color-main-24; }
-    .countdown__character__segment-b  { fill: @color-main-24; }
-    .countdown__character__segment-bl { fill: @color-main-24; }
-    .countdown__character__segment-tl { fill: @color-main-24; }
-    .countdown__character__segment-m  { fill: @color-main-24; }
+    .countdown__character__segment-t  { fill: @color-base-24; }
+    .countdown__character__segment-tr { fill: @color-base-24; }
+    .countdown__character__segment-br { fill: @color-base-24; }
+    .countdown__character__segment-b  { fill: @color-base-24; }
+    .countdown__character__segment-bl { fill: @color-base-24; }
+    .countdown__character__segment-tl { fill: @color-base-24; }
+    .countdown__character__segment-m  { fill: @color-base-24; }
     .countdown__character__dots       { fill: transparent; }
 }
 
 .countdown--9 {
-    .countdown__character__segment-t  { fill: @color-main-24; }
-    .countdown__character__segment-tr { fill: @color-main-24; }
-    .countdown__character__segment-br { fill: @color-main-24; }
-    .countdown__character__segment-b  { fill: @color-main-24; }
-    .countdown__character__segment-tl { fill: @color-main-24; }
-    .countdown__character__segment-m  { fill: @color-main-24; }
+    .countdown__character__segment-t  { fill: @color-base-24; }
+    .countdown__character__segment-tr { fill: @color-base-24; }
+    .countdown__character__segment-br { fill: @color-base-24; }
+    .countdown__character__segment-b  { fill: @color-base-24; }
+    .countdown__character__segment-tl { fill: @color-base-24; }
+    .countdown__character__segment-m  { fill: @color-base-24; }
     .countdown__character__dots       { fill: transparent; }
 }
 
@@ -188,22 +188,22 @@
     .countdown__character__segment-bl { fill: transparent; }
     .countdown__character__segment-tl { fill: transparent; }
     .countdown__character__segment-m  { fill: transparent; }
-    .countdown__character__dots       { fill: @color-main-24; }
+    .countdown__character__dots       { fill: @color-base-24; }
 }
 
 .countdown--empty {
-    .countdown__character__segment-m  { fill: @color-main-24; }
+    .countdown__character__segment-m  { fill: @color-base-24; }
     .countdown__character__dots       { fill: transparent; }
 }
 
 // to boost legibility, make leading zeros in "00" invisible
 
 .countdown--0:first-child {
-    .countdown__character__segment-t  { fill: @color-main-7; }
-    .countdown__character__segment-tr { fill: @color-main-7; }
-    .countdown__character__segment-br { fill: @color-main-7; }
-    .countdown__character__segment-b  { fill: @color-main-7; }
-    .countdown__character__segment-bl { fill: @color-main-7; }
-    .countdown__character__segment-tl { fill: @color-main-7; }
+    .countdown__character__segment-t  { fill: @color-base-7; }
+    .countdown__character__segment-tr { fill: @color-base-7; }
+    .countdown__character__segment-br { fill: @color-base-7; }
+    .countdown__character__segment-b  { fill: @color-base-7; }
+    .countdown__character__segment-bl { fill: @color-base-7; }
+    .countdown__character__segment-tl { fill: @color-base-7; }
     .countdown__character__dots       { fill: transparent; }
 }
