--- a/src/components/filterbtns/filterbtns.less
+++ b/src/components/filterbtns/filterbtns.less
@@ -13,10 +13,10 @@
 
 .filterBtns__btn {
 
-    background: @color-main-24;
+    background: @color-base-24;
     border-radius: 1.5rem;
     box-sizing: border-box;
-    color: @color-main-8;
+    color: @color-base-8;
     display: inline-block;
     font-size: 1.5rem;
     font-weight: bold;
@@ -26,13 +26,13 @@
     padding: 0 1.25rem;
 
     &:hover {
-        background: @color-main-23;
+        background: @color-base-23;
     }
 
     a,
     a:link,
     a:visited {
-        color: @color-main-8;
+        color: @color-base-8;
         display: inline-block;
         text-decoration: none;
     }
@@ -48,7 +48,7 @@
 
     .filterBtns__btn {
 
-        background: @color-main-11;
+        background: @color-base-11;
         color: @color-white;
 
         a,
@@ -60,11 +60,11 @@
     }
 
     .filterBtns__btn:hover {
-        background: @color-main-9;
+        background: @color-base-9;
     }
 
     .filterBtns__btn a::after {
-        .mixin-icon-bg(@id: 'icon-004-s', @fillColor: @color-main-18);
+        .mixin-icon-bg(@id: 'icon-004-s', @fillColor: @color-base-18);
     }
 
     .filterBtns__btn a:hover::after {
@@ -80,7 +80,7 @@
     // icon
 
     a::after {
-        .mixin-icon-bg(@id: 'icon-006-s', @fillColor: @color-main-18);
+        .mixin-icon-bg(@id: 'icon-006-s', @fillColor: @color-base-18);
     }
 
     &:hover {
@@ -109,7 +109,7 @@
 .filterBtns__btn {
 
     a::after {
-        .mixin-icon-bg(@id: 'icon-004-s', @fillColor: @color-main-17);
+        .mixin-icon-bg(@id: 'icon-004-s', @fillColor: @color-base-17);
         content: ' ';
         display: inline-block;
         height: 3rem;
@@ -121,7 +121,7 @@
     }
 
     a:hover::after {
-        .mixin-icon-bg(@id: 'icon-004-s', @fillColor: @color-main-8);
+        .mixin-icon-bg(@id: 'icon-004-s', @fillColor: @color-base-8);
     }
 
 }
