--- a/src/components/form/customcheckbox.less
+++ b/src/components/form/customcheckbox.less
@@ -7,8 +7,8 @@
 
     .mixin-defaultBorderRadius;
     background: @color-white;
-    border: @color-main-20 1px solid;
-    box-shadow: 0 1px 0 @color-main-24 inset;
+    border: @color-base-20 1px solid;
+    box-shadow: 0 1px 0 @color-base-24 inset;
     box-sizing: border-box;
     cursor: pointer;
     display: inline-block;
@@ -57,7 +57,7 @@
 .checkbox.input--checked {
 
     box-shadow: none;
-    background: @color-main-10;
+    background: @color-base-10;
     border: none;
 
     // icon regular
