--- a/src/components/form/customradiobutton.less
+++ b/src/components/form/customradiobutton.less
@@ -7,8 +7,8 @@
     
     background: @color-white;
     border-radius: 50%;
-    border: @color-main-20 1px solid;
-    box-shadow: 0 1px 0 @color-main-24 inset;
+    border: @color-base-20 1px solid;
+    box-shadow: 0 1px 0 @color-base-24 inset;
     box-sizing: border-box;
     cursor: pointer;
     display: inline-block;
@@ -58,7 +58,7 @@
 
 .radio.input--checked {
     background: @color-positive-22;
-    border: @color-main-10 .5rem solid;
+    border: @color-base-10 .5rem solid;
     box-shadow: none;
 }
 
