--- a/src/components/form/customselect.less
+++ b/src/components/form/customselect.less
@@ -9,10 +9,10 @@
     .mixin-userSelectNone;
     background-clip: padding-box;
     background: @color-white;
-    border: @color-main-21 1px solid;
-    box-shadow: 0 1px 0 @color-main-25 inset;
+    border: @color-base-21 1px solid;
+    box-shadow: 0 1px 0 @color-base-25 inset;
     box-sizing: border-box;
-    color: @color-main-8;
+    color: @color-base-8;
     cursor: pointer;
     display: inline-block;
     font-family: @font-sansserif;
@@ -53,8 +53,8 @@
 // ========
 
 .select__icon {
-    .mixin-icon-bg(@id: 'icon-002-s', @width: 24, @height: 24, @fillColor: @color-main-13);
-    border-left: @color-main-23 1px solid;
+    .mixin-icon-bg(@id: 'icon-002-s', @width: 24, @height: 24, @fillColor: @color-base-13);
+    border-left: @color-base-23 1px solid;
     height: 100%;
     pointer-events: none;
     position: absolute;
@@ -79,7 +79,7 @@
     }
 
     .select__icon {
-        .mixin-icon-bg(@id: 'icon-002-s', @width: 32, @height: 32, @fillColor: @color-main-13);
+        .mixin-icon-bg(@id: 'icon-002-s', @width: 32, @height: 32, @fillColor: @color-base-13);
         width: 4rem;
     }
 
@@ -103,5 +103,5 @@
     background: @color-white;
     border-color: @blue-18;
     box-shadow: @blue-22 0 0 10px;
-    color: @color-main-8;
+    color: @color-base-8;
 }
