--- a/src/components/hint/hint.less
+++ b/src/components/hint/hint.less
@@ -4,7 +4,7 @@
 // =====
 
 .hint {
-    border-left: @color-main-22 2px solid;
+    border-left: @color-base-22 2px solid;
     padding-left: 2.5rem;
 }
 
