--- a/src/components/imgmagnifier/imgmagnifier.less
+++ b/src/components/imgmagnifier/imgmagnifier.less
@@ -28,7 +28,7 @@
     .mixin-defaultBorderRadius;
     .mixin-shadow-2;
     background: @color-white;
-    border: @color-main-23 1px solid;
+    border: @color-base-23 1px solid;
     overflow: hidden;
     position: absolute;
     top: 0;
@@ -43,7 +43,7 @@
 
 .imgMagnifier__cursor {
     .mixin-defaultBorderRadius;
-    background: fade(@color-main-10, 20%);
+    background: fade(@color-base-10, 20%);
     border: rgba(255,255,255,.3) 1px solid;
     box-sizing: border-box;
     cursor: move;
