--- a/src/components/menu/menu.less
+++ b/src/components/menu/menu.less
@@ -5,7 +5,7 @@
 
 .menu {
     .mixin-defaultBorderRadius;
-    border: @color-main-23 1px solid;
+    border: @color-base-23 1px solid;
     list-style: none;
 }
 
@@ -14,7 +14,7 @@
 
 .menu__item {
 
-    border-top: @color-main-23 1px solid;
+    border-top: @color-base-23 1px solid;
     margin: 0;
     font-weight: bold;
     font-size: 1.3rem;
@@ -41,7 +41,7 @@
     }
 
     &:hover {
-        background: @color-main-25;
+        background: @color-base-25;
     }
 
 }
@@ -96,7 +96,7 @@
     .menu__link:link,
     .menu__link:visited,
     .menu__link:hover {
-        background: @color-main-8;
+        background: @color-base-8;
         color: @color-white;
         font-weight: bold;
     }
@@ -108,7 +108,7 @@
 
 .menu--pointLeft .is--active::after,
 .menu--pointRight .is--active::after {
-    background: @color-main-8;
+    background: @color-base-8;
     content: ' ';
     display: block;
     height: 1rem;
