--- a/src/components/pagedots/pagedots.less
+++ b/src/components/pagedots/pagedots.less
@@ -22,7 +22,7 @@
 .pageDots__btnPrev,
 .pageDots__btnNext {
 
-    color: @color-main-21;
+    color: @color-base-21;
     cursor: pointer;
     display: inline-block;
 
@@ -51,35 +51,35 @@
 // dot icon
 
 .pageDots__dot::after {
-    .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-main-22);
+    .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-base-22);
 }
 
 .pageDots__dot:hover::after {
-    .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-main-17);
+    .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-base-17);
 }
 
 .pageDots__dot.is--active::after {
-    .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-main-8);
+    .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-base-8);
 }
 
 // arrow-left icon
 
 .pageDots__btnPrev::after {
-    .mixin-icon-bg(@id: 'icon-008-s', @width: 24, @height: 24, @fillColor: @color-main-15);
+    .mixin-icon-bg(@id: 'icon-008-s', @width: 24, @height: 24, @fillColor: @color-base-15);
 }
 
 .pageDots__btnPrev:hover::after {
-    .mixin-icon-bg(@id: 'icon-008-s', @width: 24, @height: 24, @fillColor: @color-main-8);
+    .mixin-icon-bg(@id: 'icon-008-s', @width: 24, @height: 24, @fillColor: @color-base-8);
 }
 
 // arrow-right icon
 
 .pageDots__btnNext::after {
-    .mixin-icon-bg(@id: 'icon-007-s', @width: 24, @height: 24, @fillColor: @color-main-15);
+    .mixin-icon-bg(@id: 'icon-007-s', @width: 24, @height: 24, @fillColor: @color-base-15);
 }
 
 .pageDots__btnNext:hover::after {
-    .mixin-icon-bg(@id: 'icon-007-s', @width: 24, @height: 24, @fillColor: @color-main-8);
+    .mixin-icon-bg(@id: 'icon-007-s', @width: 24, @height: 24, @fillColor: @color-base-8);
 }
 
 // disabled
@@ -91,11 +91,11 @@
 }
 
 .pageDots__btnPrev.is--disabled:hover::after {
-    .mixin-icon-bg(@id: 'icon-008-s', @width: 24, @height: 24, @fillColor: @color-main-15);
+    .mixin-icon-bg(@id: 'icon-008-s', @width: 24, @height: 24, @fillColor: @color-base-15);
 }
 
 .pageDots__btnNext.is--disabled:hover::after {
-    .mixin-icon-bg(@id: 'icon-007-s', @width: 24, @height: 24, @fillColor: @color-main-15);
+    .mixin-icon-bg(@id: 'icon-007-s', @width: 24, @height: 24, @fillColor: @color-base-15);
 }
 
 // modifiers
@@ -103,16 +103,16 @@
 
 .pageDots--dark {
 
-    background: @color-main-8;
+    background: @color-base-8;
 
     // dot icon
 
     .pageDots__dot::after {
-        .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-main-12);
+        .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-base-12);
     }
 
     .pageDots__dot:hover::after {
-        .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-main-18);
+        .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-base-18);
     }
 
     .pageDots__dot.is--active::after {
@@ -122,31 +122,31 @@
     // arrow-left icon
 
     .pageDots__btnPrev::after {
-        .mixin-icon-bg(@id: 'icon-008-s', @width: 24, @height: 24, @fillColor: @color-main-17);
+        .mixin-icon-bg(@id: 'icon-008-s', @width: 24, @height: 24, @fillColor: @color-base-17);
     }
 
     .pageDots__btnPrev:hover::after {
-        .mixin-icon-bg(@id: 'icon-008-s', @width: 24, @height: 24, @fillColor: @color-main-23);
+        .mixin-icon-bg(@id: 'icon-008-s', @width: 24, @height: 24, @fillColor: @color-base-23);
     }
 
     // arrow-right icon
 
     .pageDots__btnNext::after {
-        .mixin-icon-bg(@id: 'icon-007-s', @width: 24, @height: 24, @fillColor: @color-main-17);
+        .mixin-icon-bg(@id: 'icon-007-s', @width: 24, @height: 24, @fillColor: @color-base-17);
     }
 
     .pageDots__btnNext:hover::after {
-        .mixin-icon-bg(@id: 'icon-007-s', @width: 24, @height: 24, @fillColor: @color-main-23);
+        .mixin-icon-bg(@id: 'icon-007-s', @width: 24, @height: 24, @fillColor: @color-base-23);
     }
 
     // disabled
 
     .pageDots__btnPrev.is--disabled:hover::after {
-        .mixin-icon-bg(@id: 'icon-008-s', @width: 24, @height: 24, @fillColor: @color-main-17);
+        .mixin-icon-bg(@id: 'icon-008-s', @width: 24, @height: 24, @fillColor: @color-base-17);
     }
 
     .pageDots__btnNext.is--disabled:hover::after {
-        .mixin-icon-bg(@id: 'icon-007-s', @width: 24, @height: 24, @fillColor: @color-main-17);
+        .mixin-icon-bg(@id: 'icon-007-s', @width: 24, @height: 24, @fillColor: @color-base-17);
     }
 
 }
