--- a/src/components/posterteaser/posterteaser.less
+++ b/src/components/posterteaser/posterteaser.less
@@ -9,7 +9,7 @@
     .mixin--fixFlickering;
     .mixin-clearfix;
     .mixin-defaultBorderRadius;
-    background: @color-main-5;
+    background: @color-base-5;
     border: 0;
     display: inline-block;
     font-family: @font-sansserif;
