--- a/src/components/quotation/quotation.less
+++ b/src/components/quotation/quotation.less
@@ -3,7 +3,7 @@
 .quotation {
 
     .mixin-defaultBorderRadius;
-    background: @color-main-25;
+    background: @color-base-25;
     display: block;
     font-style: italic;
     padding: 2rem 2rem 2rem 7rem;
@@ -18,7 +18,7 @@
     }
 
     &:after {
-        color: @color-main-22;
+        color: @color-base-22;
         content: '”';
         display: block;
         font-size: 10rem;
