--- a/src/components/rating/rating.less
+++ b/src/components/rating/rating.less
@@ -3,7 +3,7 @@
 // less: escape the color variables
 
 @activeStarColor   : replace(@color-gold, '#', '');
-@inactiveStarColor : replace(@color-main-23, '#', '');
+@inactiveStarColor : replace(@color-base-23, '#', '');
 
 // block
 // =====
