--- a/src/components/ruler/ruler.less
+++ b/src/components/ruler/ruler.less
@@ -1,7 +1,7 @@
 /** ruler.less */
 
 .ruler {
-    background: @color-main-23;
+    background: @color-base-23;
     border: none;
     height: 1px;
     margin: 0;
