--- a/src/components/scrollprogress/scrollprogress.less
+++ b/src/components/scrollprogress/scrollprogress.less
@@ -4,7 +4,7 @@
 // =====
 
 .scrollProgress {
-    background: fade(@color-main-5,15%);
+    background: fade(@color-base-5,15%);
     height: .5rem;
     left: 0;
     position: fixed;
@@ -17,7 +17,7 @@
 // ========
 
 .scrollProgress__track {
-    background: @color-main-8;
+    background: @color-base-8;
     bottom: 0;
     left: 0;
     position: absolute;
