--- a/src/components/stepcrumb/stepcrumb.less
+++ b/src/components/stepcrumb/stepcrumb.less
@@ -17,7 +17,7 @@
     // line
 
     &::after {
-        background: @color-main-23;
+        background: @color-base-23;
         bottom: -.5rem;
         content: ' ';
         display: block;
@@ -36,7 +36,7 @@
 
 .stepCrumb__item {
 
-    color: @color-main-8;
+    color: @color-base-8;
     display: inline-block;
     font-size: 1.3rem;
     height: 4rem;
@@ -50,7 +50,7 @@
 
     &::after {
         .mixin-defaultBorderRadius;
-        background: @color-main-23;
+        background: @color-base-23;
         content: counter(i);
         counter-increment: i;
         display: inline-block;
@@ -67,7 +67,7 @@
     // connecting line
 
     &::before {
-        background: @color-main-23;
+        background: @color-base-23;
         bottom: -.5rem;
         content: ' ';
         display: block;
@@ -81,7 +81,7 @@
     // mouseover
     
     &:hover::after {
-        background: @color-main-22;
+        background: @color-base-22;
     }
 
 }
