--- a/src/components/switch/switch.less
+++ b/src/components/switch/switch.less
@@ -60,7 +60,7 @@
     }
 
     .switch__labelOff {
-        color: @color-main-25;
+        color: @color-base-25;
         right: .8rem;
     }
 
@@ -83,7 +83,7 @@
 
     .switch--off {
 
-        background: @color-main-16;
+        background: @color-base-16;
 
         .switch__knob { left: .2rem; }
         .switch__labelOn  { display: none; }
