--- a/src/less/utilities/color-interactive.less
+++ b/src/less/utilities/color-interactive.less
@@ -9,7 +9,7 @@
     .hvr--bg-blue-@{i}:hover      { background: ~"@{blue-@{i}}" !important; }
     .hvr--bg-gray-@{i}:hover      { background: ~"@{gray-@{i}}" !important; }
     .hvr--bg-green-@{i}:hover     { background: ~"@{green-@{i}}" !important; }
-    .hvr--bg-main-@{i}:hover      { background: ~"@{color-main-@{i}}" !important; }
+    .hvr--bg-main-@{i}:hover      { background: ~"@{color-base-@{i}}" !important; }
     .hvr--bg-negative-@{i}:hover  { background: ~"@{color-negative-@{i}}" !important; }
     .hvr--bg-positive-@{i}:hover  { background: ~"@{color-positive-@{i}}" !important; }
     .hvr--bg-purple-@{i}:hover    { background: ~"@{purple-@{i}}" !important; }
@@ -22,7 +22,7 @@
     .hvr--tc-blue-@{i}:hover      { color: ~"@{blue-@{i}}" !important; }
     .hvr--tc-gray-@{i}:hover      { color: ~"@{gray-@{i}}" !important; }
     .hvr--tc-green-@{i}:hover     { color: ~"@{green-@{i}}" !important; }
-    .hvr--tc-main-@{i}:hover      { color: ~"@{color-main-@{i}}" !important; }
+    .hvr--tc-main-@{i}:hover      { color: ~"@{color-base-@{i}}" !important; }
     .hvr--tc-negative-@{i}:hover  { color: ~"@{color-negative-@{i}}" !important; }
     .hvr--tc-positive-@{i}:hover  { color: ~"@{color-positive-@{i}}" !important; }
     .hvr--tc-purple-@{i}:hover    { color: ~"@{purple-@{i}}" !important; }
@@ -35,7 +35,7 @@
     .hvr--bc-blue-@{i}:hover      { border-color: ~"@{blue-@{i}}" !important; }
     .hvr--bc-gray-@{i}:hover      { border-color: ~"@{gray-@{i}}" !important; }
     .hvr--bc-green-@{i}:hover     { border-color: ~"@{green-@{i}}" !important; }
-    .hvr--bc-main-@{i}:hover      { border-color: ~"@{color-main-@{i}}" !important; }
+    .hvr--bc-main-@{i}:hover      { border-color: ~"@{color-base-@{i}}" !important; }
     .hvr--bc-negative-@{i}:hover  { border-color: ~"@{color-negative-@{i}}" !important; }
     .hvr--bc-positive-@{i}:hover  { border-color: ~"@{color-positive-@{i}}" !important; }
     .hvr--bc-purple-@{i}:hover    { border-color: ~"@{purple-@{i}}" !important; }
