--- a/src/less/utilities/gradient.less
+++ b/src/less/utilities/gradient.less
@@ -15,7 +15,7 @@
     z-index: 1;
 }
 
-.gradient-t::after { background: linear-gradient(fade(@color-main-5, 30%), @color-transparent); }
-.gradient-r::after { background: linear-gradient(270deg, fade(@color-main-5, 30%), @color-transparent); }
-.gradient-b::after { background: linear-gradient(@color-transparent, fade(@color-main-5, 30%)); }
-.gradient-l::after { background: linear-gradient(90deg, fade(@color-main-5, 30%), @color-transparent); }
+.gradient-t::after { background: linear-gradient(fade(@color-base-5, 30%), @color-transparent); }
+.gradient-r::after { background: linear-gradient(270deg, fade(@color-base-5, 30%), @color-transparent); }
+.gradient-b::after { background: linear-gradient(@color-transparent, fade(@color-base-5, 30%)); }
+.gradient-l::after { background: linear-gradient(90deg, fade(@color-base-5, 30%), @color-transparent); }
