--- a/src/less/utilities/shadow-base.less
+++ b/src/less/utilities/shadow-base.less
@@ -2,10 +2,10 @@
 
 // shadow mixins
 
-.mixin-shadow-1 { box-shadow: 0 0 5px  fade(@color-main-15, 50%); }
-.mixin-shadow-2 { box-shadow: 0 0 10px fade(@color-main-15, 50%); }
-.mixin-shadow-3 { box-shadow: 0 0 20px fade(@color-main-15, 50%); }
-.mixin-shadow-4 { box-shadow: 0 0 35px fade(@color-main-15, 50%); }
+.mixin-shadow-1 { box-shadow: 0 0 5px  fade(@color-base-15, 50%); }
+.mixin-shadow-2 { box-shadow: 0 0 10px fade(@color-base-15, 50%); }
+.mixin-shadow-3 { box-shadow: 0 0 20px fade(@color-base-15, 50%); }
+.mixin-shadow-4 { box-shadow: 0 0 35px fade(@color-base-15, 50%); }
 
 // box shadows
 
@@ -18,7 +18,7 @@
 // text shadows
 
 .tsh-0 { text-shadow: none !important; }
-.tsh-1 { text-shadow: 0 1px 0 fade(@color-main-5,30%) !important; }
-.tsh-2 { text-shadow: 0 1px 0 fade(@color-main-5,50%) !important; }
-.tsh-3 { text-shadow: 0 1px 3px fade(@color-main-5,70%) !important; }
-.tsh-4 { text-shadow: 0 2px 5px fade(@color-main-5,50%) !important; }
+.tsh-1 { text-shadow: 0 1px 0 fade(@color-base-5,30%) !important; }
+.tsh-2 { text-shadow: 0 1px 0 fade(@color-base-5,50%) !important; }
+.tsh-3 { text-shadow: 0 1px 3px fade(@color-base-5,70%) !important; }
+.tsh-4 { text-shadow: 0 2px 5px fade(@color-base-5,50%) !important; }
