--- a/src/components/accordion/accordion.less
+++ b/src/components/accordion/accordion.less
@@ -7,7 +7,7 @@
 
     .mixin-clearfix;
     .mixin-defaultBorderRadius;
-    border: @color-main-22 1px solid;
+    border: @color-base-22 1px solid;
     box-sizing: border-box;
 
     // reset borders
@@ -30,7 +30,7 @@
 
     .mixin-userSelectNone;
     background: @color-white;
-    border-bottom: @color-main-22 1px solid;
+    border-bottom: @color-base-22 1px solid;
     cursor: pointer;
     margin: 0;
     min-height: 2rem;
@@ -38,7 +38,7 @@
     position: relative;
 
     &:hover {
-        background: @color-main-25;
+        background: @color-base-25;
     }
     
     &:focus {
@@ -68,18 +68,18 @@
     }
 
     .is--open .accordion__header::after {
-        .mixin-icon-bg(@id: 'icon-003-s', @fillColor: @color-main-22);
+        .mixin-icon-bg(@id: 'icon-003-s', @fillColor: @color-base-22);
     }
 
     .is--closed .accordion__header::after {
-        .mixin-icon-bg(@id: 'icon-002-s', @fillColor: @color-main-22);
+        .mixin-icon-bg(@id: 'icon-002-s', @fillColor: @color-base-22);
     }
 
 }
 
 .accordion__body {
-    background: fade(@color-main-25,50%);
-    border-bottom: @color-main-22 1px solid;
+    background: fade(@color-base-25,50%);
+    border-bottom: @color-base-22 1px solid;
     margin: 0;
     overflow: hidden;
     padding: 1rem;
