--- a/src/components/box/box.less
+++ b/src/components/box/box.less
@@ -8,7 +8,7 @@
     .mixin-clearfix;
     .mixin-defaultBorderRadius;
     background: @color-white;
-    border: @color-main-23 1px solid;
+    border: @color-base-23 1px solid;
     box-sizing: border-box;
     display: block;
     font-family: @font-sansserif;
@@ -49,8 +49,8 @@
     @h4();
     margin: 0;
     padding: .5rem 1rem;
-    background: @color-main-25;
-    border-bottom: @color-main-23 1px solid;
+    background: @color-base-25;
+    border-bottom: @color-base-23 1px solid;
 }
 
 .box__body {
@@ -67,7 +67,7 @@
     }
 
     & + & {
-        border-top: @color-main-23 1px solid;
+        border-top: @color-base-23 1px solid;
     }
 
 }
