--- a/src/components/breadcrumbs/breadcrumbs.less
+++ b/src/components/breadcrumbs/breadcrumbs.less
@@ -5,8 +5,8 @@
 
 .breadcrumbs {
     .mixin-defaultBorderRadius;
-    background: @color-main-25;
-    border: @color-main-23 1px solid;
+    background: @color-base-25;
+    border: @color-base-23 1px solid;
     line-height: 2.5rem;
     overflow: hidden;
     padding: 0 1.5rem 0 0;
@@ -32,11 +32,11 @@
     }
 
     &:hover .breadcrumbs__label {
-        background: @color-main-24;
+        background: @color-base-24;
     }
 
     &:hover .breadcrumbs__link::after {
-        background: @color-main-24;
+        background: @color-base-24;
     }
 
     // spacing
@@ -69,15 +69,15 @@
     
     &:link, &:visited,
     &:hover, &:active {
-        color: @color-main-8;
+        color: @color-base-8;
     }
 
     // pointy right edge
 
     &::after {
-        background: @color-main-25;
-        border-right: @color-main-22 1px solid;
-        border-top: @color-main-22 1px solid;
+        background: @color-base-25;
+        border-right: @color-base-22 1px solid;
+        border-top: @color-base-22 1px solid;
         box-sizing: border-box;
         content: ' ';
         display: inline-block;
