--- a/src/components/datepicker/datepicker.less
+++ b/src/components/datepicker/datepicker.less
@@ -6,7 +6,7 @@
 .datePicker {
     .mixin-defaultBorderRadius;
     background: @color-white;
-    border: @color-main-23 1px solid;
+    border: @color-base-23 1px solid;
     box-sizing: border-box;
     overflow: hidden;
     position: absolute;
@@ -17,7 +17,7 @@
 .js .datePicker {
     .mixin-shadow-3;
     background-clip: padding-box;
-    border: fade(@color-main-20, 30%) 1px solid;
+    border: fade(@color-base-20, 30%) 1px solid;
 }
 
 // elements
@@ -32,7 +32,7 @@
     // calendar icon
 
     &::after {
-        .mixin-icon-bg(@id: 'icon-017-s', @fillColor: @color-main-15);
+        .mixin-icon-bg(@id: 'icon-017-s', @fillColor: @color-base-15);
         content: ' ';
         width: 3.2rem;
         height: 3.2rem;
@@ -41,7 +41,7 @@
     }
 
     &:hover::after {
-        .mixin-icon-bg(@id: 'icon-017-s', @fillColor: @color-main-8);
+        .mixin-icon-bg(@id: 'icon-017-s', @fillColor: @color-base-8);
     }
 
 }
@@ -52,7 +52,7 @@
     height: 4rem;
     line-height: 4rem;
     text-align: center;
-    background: @color-main-25;
+    background: @color-base-25;
 }
 
 .datePicker__btnPrev,
@@ -65,34 +65,34 @@
 
 .datePicker__btnPrev {
     
-    .mixin-icon-bg(@id: 'icon-008-s', @fillColor: @color-main-20);
+    .mixin-icon-bg(@id: 'icon-008-s', @fillColor: @color-base-20);
     left: 0;
     
     &:hover {
-        .mixin-icon-bg(@id: 'icon-008-s', @fillColor: @color-main-8);
+        .mixin-icon-bg(@id: 'icon-008-s', @fillColor: @color-base-8);
     }
     
 }
 
 .datePicker__btnNext {
     
-    .mixin-icon-bg(@id: 'icon-007-s', @fillColor: @color-main-20);
+    .mixin-icon-bg(@id: 'icon-007-s', @fillColor: @color-base-20);
     right: 0;
     
     &:hover {
-        .mixin-icon-bg(@id: 'icon-007-s', @fillColor: @color-main-8);
+        .mixin-icon-bg(@id: 'icon-007-s', @fillColor: @color-base-8);
     }
     
 }
 
 .datePicker__days {
 
-    background: @color-main-25;
+    background: @color-base-25;
     border-bottom: 0;
     border-left: 0;
     border-radius: 0;
     border-right: 0;
-    border-color: @color-main-24;
+    border-color: @color-base-24;
     table-layout: fixed;
     width: 100%;
 
@@ -102,7 +102,7 @@
     }
     
     th {
-        color: @color-main-15;
+        color: @color-base-15;
         font-weight: normal;
     }
 
@@ -118,11 +118,11 @@
 
     td:hover {
 
-        background: @color-main-23;
-        color: @color-main-8;
+        background: @color-base-23;
+        color: @color-base-8;
 
         &::after {
-            background: @color-main-10;
+            background: @color-base-10;
         }
 
     }
@@ -141,13 +141,13 @@
 
 .datePicker__days .datePicker--today {
 
-    color: @color-main-8;
+    color: @color-base-8;
     font-weight: bold;
-    outline: @color-main-22 1px solid;
+    outline: @color-base-22 1px solid;
     position: relative;
 
     &::after {
-        background: @color-main-10;
+        background: @color-base-10;
         border-radius: 50%;
         content: ' ';
         height: .4rem;
