--- a/src/components/dock/dock.less
+++ b/src/components/dock/dock.less
@@ -5,7 +5,7 @@
 
 .dock {
     .mixin-shadow-2;
-    background: @color-main-25;
+    background: @color-base-25;
     bottom: 0;
     box-sizing: border-box;
     overflow-y: scroll;
@@ -41,7 +41,7 @@
 
 .dock--left {
 
-    border-right: fade(@color-main-15, 30%) 1px solid;
+    border-right: fade(@color-base-15, 30%) 1px solid;
     left: 0;
 
     &.is--hidden {
@@ -51,7 +51,7 @@
     // icon
 
     &::before {
-        .mixin-icon-bg(@id: 'icon-007-s', @width: 24, @height: 24, @fillColor: @color-main-8);
+        .mixin-icon-bg(@id: 'icon-007-s', @width: 24, @height: 24, @fillColor: @color-base-8);
         left: -.2rem;
         right: auto;
     }
@@ -60,7 +60,7 @@
 
 .dock--right {
 
-    border-left: fade(@color-main-15, 30%) 1px solid;
+    border-left: fade(@color-base-15, 30%) 1px solid;
     right: 0;
 
     &.is--hidden {
@@ -70,7 +70,7 @@
     // icon
 
     &::before {
-        .mixin-icon-bg(@id: 'icon-008-s', @width: 24, @height: 24, @fillColor: @color-main-8);
+        .mixin-icon-bg(@id: 'icon-008-s', @width: 24, @height: 24, @fillColor: @color-base-8);
         left: auto;
         right: -.2rem;
     }
