--- a/src/components/flipbtns/flipbtns.less
+++ b/src/components/flipbtns/flipbtns.less
@@ -20,18 +20,18 @@
 
     box-sizing: border-box;
     background: @color-white;
-    border: @color-main-23 1px solid;
-    color: @color-main-8;
+    border: @color-base-23 1px solid;
+    color: @color-base-8;
     cursor: pointer;
     display: block;
     height: 5rem;
     margin-top: -2.5rem;
     position: absolute;
-    text-shadow: 0 1px 0 @color-main-25;
+    text-shadow: 0 1px 0 @color-base-25;
     width: 3rem;
 
     &:hover {
-        background: @color-main-25;
+        background: @color-base-25;
     }
 
     // icons
@@ -53,7 +53,7 @@
     left: -3rem;
 
     &::after {
-        .mixin-icon-bg(@id: 'icon-008-s', @fillColor: @color-main-8);
+        .mixin-icon-bg(@id: 'icon-008-s', @fillColor: @color-base-8);
     }
 
 }
@@ -65,7 +65,7 @@
     right: -3rem;
 
     &::after {
-        .mixin-icon-bg(@id: 'icon-007-s', @fillColor: @color-main-8);
+        .mixin-icon-bg(@id: 'icon-007-s', @fillColor: @color-base-8);
     }
 
 }
@@ -94,14 +94,14 @@
 &.flipBtns--inset {
 
     .flipBtns__btnPrev {
-        border: @color-main-23 1px solid;
+        border: @color-base-23 1px solid;
         border-radius: 0 (@defaultBorderRadius * 1px) (@defaultBorderRadius * 1px) 0;
         border-left: 0;
         left: 0;
     }
 
     .flipBtns__btnNext {
-        border: @color-main-23 1px solid;
+        border: @color-base-23 1px solid;
         border-radius: (@defaultBorderRadius * 1px) 0 0 (@defaultBorderRadius * 1px);
         border-right: 0;
         right: 0;
