--- a/src/components/iconmenu/iconmenu.less
+++ b/src/components/iconmenu/iconmenu.less
@@ -5,7 +5,7 @@
 
 .iconMenu {
     
-    border-top: @color-main-23 1px solid;
+    border-top: @color-base-23 1px solid;
     margin: 0 2rem 2rem 0;
     
     ul& {
@@ -18,7 +18,7 @@
 // ========
 
 .iconMenu__item {
-    border-bottom: @color-main-23 1px solid;
+    border-bottom: @color-base-23 1px solid;
     position: relative;
     line-height: 2rem;
 }
@@ -31,12 +31,12 @@
     text-decoration: none;
     
     &:link, &:visited {
-        color: @color-main-10;
+        color: @color-base-10;
         text-decoration: none;
     }
     
     &:hover {
-        background: @color-main-25;
+        background: @color-base-25;
     }
     
 }
@@ -48,7 +48,7 @@
     top: 1.25rem;
     
     circle, ellipse, path, polygon {
-        fill: @color-main-17;
+        fill: @color-base-17;
     }
     
 }
@@ -63,11 +63,11 @@
 
 .iconMenu__item.is--active {
     
-   background: @color-main-24;
-   color: @color-main-8;
+   background: @color-base-24;
+   color: @color-base-8;
    
    circle, ellipse, path, polygon {
-       fill: @color-main-8;
+       fill: @color-base-8;
    }
 
 }
