--- a/src/components/mainmenu/mainmenu.less
+++ b/src/components/mainmenu/mainmenu.less
@@ -14,7 +14,7 @@
 .mainMenu__menu {
 
     border-radius: (@defaultBorderRadius * 1px) (@defaultBorderRadius * 1px) 0 0;
-    border: @color-main-23 1px solid;
+    border: @color-base-23 1px solid;
     border-bottom: 0;
     box-sizing: border-box;
     height: 5rem;
@@ -32,8 +32,8 @@
     }
 
     a {
-        border-right: 1px @color-main-23 solid;
-        color: @color-main-10;
+        border-right: 1px @color-base-23 solid;
+        color: @color-base-10;
         display: block;
         font-size: 1.5rem;
         font-weight: bold;
@@ -47,12 +47,12 @@
     a:hover,
     a.mainMenu--active,
     a.mainMenu--current:hover {
-        background: @color-main-25;
+        background: @color-base-25;
     }
 
     a:active,
     a.mainMenu--current {
-        background: @color-main-24;
+        background: @color-base-24;
     }
 
 }
