--- a/src/components/pagebtns/pagebtns.less
+++ b/src/components/pagebtns/pagebtns.less
@@ -5,7 +5,7 @@
 
 .pageBtns {
     .mixin-userSelectNone;
-    background: fade(@color-main-8, 70%);
+    background: fade(@color-base-8, 70%);
     border-radius: @defaultBorderRadius * 1px;
     display: inline-block;
     height: 4rem;
@@ -13,7 +13,7 @@
     min-width: 8rem;
     position: relative;
     text-align: center;
-    text-shadow: 0 1px 0 fade(@color-main-5, 30%);
+    text-shadow: 0 1px 0 fade(@color-base-5, 30%);
 }
 
 // elements
@@ -25,7 +25,7 @@
     .mixin-defaultBorderRadius;
     background: transparent;
     border: 0;
-    color: @color-main-25;
+    color: @color-base-25;
     cursor: pointer;
     display: inline-block;
     height: 4rem;
@@ -37,7 +37,7 @@
     width: 4rem;
 
     &:hover {
-        background: @color-main-10;
+        background: @color-base-10;
     }
 
     // icons
@@ -57,15 +57,15 @@
 .pageBtns__btnNext { right: 0; }
 
 .pageBtns__btnPrev::after {
-    .mixin-icon-bg(@id: 'icon-008-s', @fillColor: @color-main-25);
+    .mixin-icon-bg(@id: 'icon-008-s', @fillColor: @color-base-25);
 }
 
 .pageBtns__btnNext::after {
-    .mixin-icon-bg(@id: 'icon-007-s', @fillColor: @color-main-25);
+    .mixin-icon-bg(@id: 'icon-007-s', @fillColor: @color-base-25);
 }
 
 .pageBtns__indicator {
-    color: @color-main-25;
+    color: @color-base-25;
     display: inline-block;
     font: bold 1.5rem/4rem @font-sansserif;
     height: 4rem;
