--- a/src/components/pagination/pagination.less
+++ b/src/components/pagination/pagination.less
@@ -5,8 +5,8 @@
 
 .pagination {
     .mixin-defaultBorderRadius;
-    background: @color-main-25;
-    border: @color-main-23 1px solid;
+    background: @color-base-25;
+    border: @color-base-23 1px solid;
     height: 3.3rem;
     margin: 1rem 0;
     position: relative;
@@ -33,7 +33,7 @@
 }
 
 .pagination__item .btn:hover {
-    background: @color-main-23;
+    background: @color-base-23;
 }
 
 // modifiers
@@ -43,6 +43,6 @@
 
 .pagination .is--active .btn,
 .pagination .is--active .btn:hover {
-    background: @color-main-10;
-    color: @color-main-24;
+    background: @color-base-10;
+    color: @color-base-24;
 }
