--- a/src/components/pickbtn/pickbtn.less
+++ b/src/components/pickbtn/pickbtn.less
@@ -8,10 +8,10 @@
     .mixin-clearAppearance;
     .mixin-defaultBorderRadius;
     .mixin-userSelectNone;
-    background: @color-main-25;
-    border: @color-main-23 1px solid;
+    background: @color-base-25;
+    border: @color-base-23 1px solid;
     box-sizing: border-box;
-    color: @color-main-10;
+    color: @color-base-10;
     cursor: pointer;
     display: inline-block;
     height: 3rem;
@@ -28,8 +28,8 @@
     }
 
     &:hover {
-        background: @color-main-24;
-        border-color: @color-main-24;
+        background: @color-base-24;
+        border-color: @color-base-24;
     }
 
     input {
@@ -52,7 +52,7 @@
 }
 
 .pickBtn__label + .pickBtn__toggleLabel {
-    border-left: @color-main-23 1px dashed;
+    border-left: @color-base-23 1px dashed;
     margin-left: .5rem;
     padding-left: .5rem;
 }
