--- a/src/components/piechart/piechart.less
+++ b/src/components/piechart/piechart.less
@@ -13,7 +13,7 @@
 // svg
 
 .pieChart svg {
-    background: @color-main-25;
+    background: @color-base-25;
     border-radius: 50%;
     float: left;
     margin-right: 4rem;
