--- a/src/components/popover/popover.less
+++ b/src/components/popover/popover.less
@@ -6,15 +6,15 @@
 .js .popOver {
     .mixin-shadow-3;
     background-clip: padding-box;
-    border: fade(@color-main-20, 30%) 1px solid;
+    border: fade(@color-base-20, 30%) 1px solid;
     position: absolute;
     z-index: 601;
 }
 
 .popOver {
-    background: @color-main-25;
+    background: @color-base-25;
     border-radius: (@defaultBorderRadius * 1px);
-    border: @color-main-23 1px solid;
+    border: @color-base-23 1px solid;
 }
 
 // elements
