--- a/src/components/searchprompt/searchprompt.less
+++ b/src/components/searchprompt/searchprompt.less
@@ -9,8 +9,8 @@
 // ========
 
 .searchPrompt__icon {
-    .mixin-icon-bg(@id: 'icon-012', @fillColor: @color-main-20);
-    color: @color-main-10;
+    .mixin-icon-bg(@id: 'icon-012', @fillColor: @color-base-20);
+    color: @color-base-10;
     height: 3.2rem;
     left: .9rem;
     position: absolute;
@@ -24,7 +24,7 @@
     // inherits from text input
 
     border-radius: 2.5rem;
-    color: @color-main-15;
+    color: @color-base-15;
     font-size: 1.5rem;
     height: 5rem;
     line-height: 4.8rem;
@@ -33,7 +33,7 @@
 
     &:focus {
         border-radius: 2.5rem;
-        color: @color-main-8;
+        color: @color-base-8;
         padding-left: 1rem;
         padding-right: 5rem;
     }
@@ -53,10 +53,10 @@
 .searchPrompt__button[type] {
     
     .mixin-clearAppearance;
-    background: @color-main-23;
+    background: @color-base-23;
     border-radius: (2px * @defaultBorderRadius) 2rem 2rem (2px * @defaultBorderRadius) ;
     border: 0;
-    color: @color-main-8;
+    color: @color-base-8;
     cursor: pointer;
     font-family: @font-sansserif;
     font-size: 1.5rem;
@@ -72,7 +72,7 @@
     pointer-events: none;
     
     &:hover {
-        background: @color-main-22;
+        background: @color-base-22;
     }
     
 }
