--- a/src/components/shelf/shelf.less
+++ b/src/components/shelf/shelf.less
@@ -5,8 +5,8 @@
 
 .shelf {
     .mixin-defaultBorderRadius;
-    background: @color-main-24;
-    border: @color-main-22 1px solid;
+    background: @color-base-24;
+    border: @color-base-22 1px solid;
     padding: 2rem 0;
 }
 
@@ -24,9 +24,9 @@
         background: @color-white;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
-        border-bottom: @color-main-23 4px solid;
+        border-bottom: @color-base-23 4px solid;
         bottom: 1rem;
-        box-shadow: 0 0 4rem fade(@color-main-15, 50%);
+        box-shadow: 0 0 4rem fade(@color-base-15, 50%);
         content: ' ';
         height: 5rem;
         left: 2rem;
