--- a/src/components/slider/slider.less
+++ b/src/components/slider/slider.less
@@ -6,7 +6,7 @@
 .slider {
 
     .mixin-defaultBorderRadius;
-    border: @color-main-23 1px solid;
+    border: @color-base-23 1px solid;
     padding: 0;
     position: relative;
     text-align: center;
@@ -59,7 +59,7 @@
 
 .slider__caption {
 
-    border-top: @color-main-23 1px solid;
+    border-top: @color-base-23 1px solid;
     font-size: 1.5rem;
     margin: 0;
     padding: 1rem;
@@ -80,13 +80,13 @@
 
 .slider--dark {
 
-    background: @color-main-10;
-    border-color: @color-main-8;
-    color: @color-main-25;
+    background: @color-base-10;
+    border-color: @color-base-8;
+    color: @color-base-25;
 
     .slider__caption {
-        border-color: @color-main-8;
-        color: @color-main-24;
+        border-color: @color-base-8;
+        color: @color-base-24;
     }
 
 }
@@ -96,7 +96,7 @@
     .slider__caption {
 
         box-sizing: border-box;
-        background: fade(@color-main-8,70%);
+        background: fade(@color-base-8,70%);
         border: 0;
         bottom: 0;
         color: @color-white;
