--- a/src/components/tabs/tabs.less
+++ b/src/components/tabs/tabs.less
@@ -5,7 +5,7 @@
 
 .tabs {
     border-radius: 1px * @defaultBorderRadius;
-    border: @color-main-23 1px solid;
+    border: @color-base-23 1px solid;
 }
 
 // elements
@@ -20,11 +20,11 @@
 }
 
 .tabs__menu {
-    background: @color-main-25;
+    background: @color-base-25;
     border-radius: 0;
     border: 0;
-    border-bottom: @color-main-23 1px solid;
-    color: @color-main-8;
+    border-bottom: @color-base-23 1px solid;
+    color: @color-base-8;
     display: table;
     position: relative;
     table-layout: fixed;
@@ -40,7 +40,7 @@
 .tabs__item {
 
     display: table-cell;
-    border-right: @color-main-23 1px solid;
+    border-right: @color-base-23 1px solid;
     position: relative;
     vertical-align: bottom;
 
@@ -83,7 +83,7 @@
     &:active,
     &:link,
     &:visited {
-        color: @color-main-10;
+        color: @color-base-10;
         text-decoration: none;
     }
 
@@ -102,7 +102,7 @@
         width: 56px;
 
         * {
-            fill: @color-main-10;
+            fill: @color-base-10;
         }
 
     }
@@ -123,7 +123,7 @@
     }
 
     .tabs__item {
-        border-right: @color-main-23 1px solid;
+        border-right: @color-base-23 1px solid;
         display: inline-block;
     }
 
@@ -146,27 +146,27 @@
 
     background: transparent;
     border: 0;
-    color: @color-main-12;
+    color: @color-base-12;
 
     .tabs__item {
         background-color: transparent;
         border-right: 0;
-        box-shadow: 0 -1px 0 @color-main-23 inset;
+        box-shadow: 0 -1px 0 @color-base-23 inset;
     }
 
     .tabs__link:hover {
-        color: @color-main-8;
+        color: @color-base-8;
         background-color: transparent;
     }
 
     .tabs__item.is--active {
-        border-left: @color-main-23 1px solid;
-        border-right: @color-main-23 1px solid;
+        border-left: @color-base-23 1px solid;
+        border-right: @color-base-23 1px solid;
         border-top-left-radius: 1px * @defaultBorderRadius;
         border-top-right-radius: 1px * @defaultBorderRadius;
-        border-top: @color-main-23 1px solid;
+        border-top: @color-base-23 1px solid;
         box-shadow: none;
-        color: @color-main-8;
+        color: @color-base-8;
     }
 
 }
@@ -198,20 +198,20 @@
     .tabs__item {
 
         border: 0;
-        border-bottom: @color-main-24 2px solid;
+        border-bottom: @color-base-24 2px solid;
 
         &:hover {
-            border-bottom-color: @color-main-18;
+            border-bottom-color: @color-base-18;
         }
 
     }
 
     .tabs__link {
 
-        color: @color-main-13;
+        color: @color-base-13;
 
         circle, ellipse, path, polygon {
-            fill: @color-main-13;
+            fill: @color-base-13;
         }
 
     }
@@ -220,21 +220,21 @@
     .tabs__item.is--active:hover {
 
         background: transparent;
-        border-bottom-color: @color-main-10;
+        border-bottom-color: @color-base-10;
 
         .tabs__link {
-            color: @color-main-8;
+            color: @color-base-8;
         }
 
         circle, ellipse, path, polygon {
-            fill: @color-main-8;
+            fill: @color-base-8;
         }
 
     }
 
     .tabs__item.is--active::after {
         background: transparent;
-        border-color: transparent transparent @color-main-10 transparent;
+        border-color: transparent transparent @color-base-10 transparent;
         border-style: solid;
         border-width: 0 1rem 1rem 1rem;
         bottom: -1rem;
