--- a/src/components/tooltip/tooltip.less
+++ b/src/components/tooltip/tooltip.less
@@ -7,8 +7,8 @@
 
     .mixin-shadow-4;
     .mixin-defaultBorderRadius;
-    background: @color-main-8;
-    color: @color-main-25;
+    background: @color-base-8;
+    color: @color-base-25;
     display: block;
     max-width: 25rem;
     padding: 1rem 1.5rem;
@@ -20,7 +20,7 @@
     // typography inside tooltip
 
     h1, h2, h3, h4, h5, h6, p, ul, ol {
-        color: @color-main-25;
+        color: @color-base-25;
         font: normal 1.3rem/2rem @font-sansserif;
     }
 
@@ -49,7 +49,7 @@
 .tooltip--right::after,
 .tooltip--bottom::after,
 .tooltip--left::after {
-    background: @color-main-8;
+    background: @color-base-8;
     box-sizing: border-box;
     content: ' ';
     height: 1rem;
