--- a/src/less/utilities/border.less
+++ b/src/less/utilities/border.less
@@ -8,11 +8,11 @@
 .b-b-0 { border-bottom: 0 !important; }
 .b-l-0 { border-left: 0 !important; }
 
-.b-all { border: @color-main-23 1px solid !important; }
-.b-t   { border-top: @color-main-23 1px solid !important; }
-.b-r   { border-right: @color-main-23 1px solid !important; }
-.b-b   { border-bottom: @color-main-23 1px solid !important; }
-.b-l   { border-left: @color-main-23 1px solid !important; }
+.b-all { border: @color-base-23 1px solid !important; }
+.b-t   { border-top: @color-base-23 1px solid !important; }
+.b-r   { border-right: @color-base-23 1px solid !important; }
+.b-b   { border-bottom: @color-base-23 1px solid !important; }
+.b-l   { border-left: @color-base-23 1px solid !important; }
 
 // border style
 
